# AdventOfCode2025

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
src/: CMakeLists.txt  main.cpp  version.hpp
src/day01/: main.cpp  solution.hpp  test.cpp
src/day02/: main.cpp  solution.hpp  test.cpp
src/day03/: main.cpp  solution.hpp  test.cpp
src/day04/: main.cpp  solution.hpp  test.cpp
src/day05/: main.cpp  solution.hpp  test.cpp
src/global/: global.hpp
src/logger/: logger.hpp
