add_executable(${CMAKE_PROJECT_NAME}
    main.cpp
)

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_custom_command(
    OUTPUT ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.sha256
    COMMAND sha256sum ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME} > ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.sha256
    DEPENDS ${CMAKE_PROJECT_NAME}
    COMMENT "Generating SHA256 hash for ${CMAKE_PROJECT_NAME}"
)

add_custom_target(hash ALL DEPENDS ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}.sha256)

